# reeln-plugin-openai

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: smart-zoom-requirements.md
plugin_name/: __init__.py  plugin.py
reeln_openai_plugin/: __init__.py  client.py  frames.py  game_image.py  livestream.py  playlist.py  plugin.py  prompts.py  render_metadata.py  short_metadata.py  translate.py  zoom.py
reeln_openai_plugin/prompt_templates/: frame_describe.txt  game_image.txt  livestream_description.txt  livestream_title.txt  playlist_description.txt  playlist_title.txt  render_description.txt  render_title.txt  short_description.txt  short_title.txt  smart_zoom_detect.txt  translate_batch.txt  translate_single.txt
tests/: conftest.py
tests/unit/: test_client.py  test_frames.py  test_game_image.py  test_livestream.py  test_playlist.py  test_plugin.py  test_prompts.py  test_render_metadata.py  test_short_metadata.py  test_translate.py  test_zoom.py
