[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reeln-plugin-openai"
dynamic = ["version"]
description = "reeln-cli plugin for OpenAI-powered LLM integration (metadata, translation, zoom)"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = ["Pillow"]

[project.urls]
Homepage = "https://streamn.dad"
Repository = "https://github.com/StreamnDad/reeln-plugin-openai"
Changelog = "https://github.com/StreamnDad/reeln-plugin-openai/blob/main/CHANGELOG.md"
Issues = "https://github.com/StreamnDad/reeln-plugin-openai/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
]

[project.entry-points."reeln.plugins"]
openai = "reeln_openai_plugin:OpenAIPlugin"

[tool.hatch.build.targets.wheel]
packages = ["reeln_openai_plugin"]

[tool.hatch.version]
path = "reeln_openai_plugin/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "reeln.*"
ignore_missing_imports = true
